[tool.poetry]
name = "survival-estimation"
version = "0.0.0"
description = ""
authors = ["vlaurent <vlaurent@eurobios.com>"]
readme = "README.md"
packages = [{include = "survival_estimation"}]

[tool.poetry.dependencies]
python = "^3"
matplotlib = "^3"
seaborn = "*"
numba = "*"
scipy = "*"
scikit-learn = "*"
pandas = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
