[project]
name = "survival_data_handler"
version = "2024.1.4"
description = ""
authors = [{ name = 'Vincent Laurent', email = 'vlaurent@eurobios.com' }]
readme = "README.md"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
